--- a/examples/openllama-3b/lora.yml
+++ b/examples/openllama-3b/lora.yml
@@ -12,7 +12,7 @@ dataset_prepared_path:
 val_set_size: 0.02
 adapter: lora
 lora_model_dir:
-sequence_len: 1024
+sequence_len: 256
 sample_packing: true
 lora_r: 8
 lora_alpha: 16
@@ -32,8 +32,8 @@ wandb_watch:
 wandb_name:
 wandb_log_model:
 output_dir: ./lora-out
-gradient_accumulation_steps: 1
-micro_batch_size: 2
+gradient_accumulation_steps: 2
+micro_batch_size: 4
 num_epochs: 4
 optimizer: adamw_bnb_8bit
 torchdistx_path:
@@ -50,7 +50,7 @@ resume_from_checkpoint:
 local_rank:
 logging_steps: 1
 xformers_attention:
-flash_attention: true
+flash_attention: false
 gptq_groupsize:
 gptq_model_v1:
 warmup_steps: 20
