--- a/examples/pythia/ia3.yml
+++ b/examples/pythia/ia3.yml
@@ -1,5 +1,5 @@
 base_model: EleutherAI/pythia-1.4b-deduped
-load_in_8bit: true
+load_in_8bit: false
 datasets:
   - path: gsm8k
     name: main
@@ -7,7 +7,7 @@ datasets:
     type: alpaca_chat.load_qa
 dataset_prepared_path:
 val_set_size: 0.05
-adapter: lora
+adapter: ia3
 lora_model_dir:
 sequence_len: 256
 lora_r: 16
@@ -31,6 +31,7 @@ train_on_inputs: false
 group_by_length: false
 bf16: false
 fp16: true
+tf32: false
 early_stopping_patience:
 resume_from_checkpoint:
 local_rank:
