ignore trained models

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,7 @@
 configs
 
 # Models
-lora-alpaca-pythia/
-lora-out/
-phi-sft-out
-out/
-last_run_prepared
+trained_models/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
