--- a/examples/pythia/ia3.yml
+++ b/examples/pythia/ia3.yml
@@ -22,7 +22,7 @@ wandb_entity:
 wandb_watch:
 wandb_name:
 wandb_log_model:
-output_dir: ./lora-alpaca-pythia
+output_dir: ./ia3-alpaca-pythia
 gradient_accumulation_steps: 1
 micro_batch_size: 4
 num_epochs: 4
